[workspace]
members = ["garde_derive", "garde"]
resolver = "2"

[workspace.package]
rust-version = "1.81"
version = "0.21.0"

[workspace.dependencies]
garde = { path = "garde", version = "=0.21.0", default-features = false }
garde_derive = { path = "garde_derive", version = "=0.21.0", default-features = false }

[profile.dev.package]
insta = { opt-level = 3 }
trybuild = { opt-level = 3 }
