[package]
name = "garde"
version.workspace = true
rust-version.workspace = true
edition = "2021"
repository = "https://github.com/jprochazk/garde"
license = "MIT OR Apache-2.0"
description = "Validation library"
keywords = ["validation", "validate", "valid"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = [
    "derive",
    "serde",
    "url",
    "credit-card",
    "phone-number",
    "email",
    "email-idna",
    "regex",
    "unicode",
]

serde = ["dep:serde", "compact_str/serde", "smallvec/serde"]
derive = ["dep:garde_derive"]
url = ["dep:url"]
unicode = ["dep:unicode-segmentation"]
credit-card = ["dep:card-validate"]
phone-number = ["dep:phonenumber"]
email = ["regex"]
email-idna = ["dep:idna"]
regex = ["dep:regex", "dep:once_cell", "garde_derive?/regex"]
pattern = ["regex"]                                           # for backward compatibility with <0.14.0
js-sys = ["dep:js-sys"]
rust_decimal = ["dep:rust_decimal"]

[dependencies]
# Workspace
garde_derive = { workspace = true, optional = true, default-features = false }

smallvec = { version = "1.11.0", default-features = false }
compact_str = { version = "0.8.0", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
url = { version = "2", optional = true }
unicode-segmentation = { version = "1.10.1", optional = true }
card-validate = { version = "2.3", optional = true }
phonenumber = { version = "0.3.6+8.13.36", optional = true }
regex = { version = "1", default-features = false, features = [
    "std",
], optional = true }
once_cell = { version = "1", optional = true }
idna = { version = "1", optional = true }
rust_decimal = { version = "1", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
trybuild = { version = "1.0" }
insta = { version = "1.29" }
owo-colors = { version = "4" }
glob = "0.3.1"
serde_json = { version = "1.0.112", features = ["preserve_order"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.38"
