[package]
name = "garde"
version.workspace = true
rust-version.workspace = true
edition = "2021"
repository = "https://github.com/jprochazk/garde"
license = "MIT OR Apache-2.0"
description = "Validation library"
keywords = ["validation", "validate", "valid"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = [
    "derive",
    "serde",
    "url",
    "credit-card",
    "phone-number",
    "email",
    "email-idna",
    "regex",
    "unicode",
]

# When adding new feature flags for validation rules, make sure to add the
# corresponding feature flag in `garde_derive` for better compiler errors.
serde = ["dep:serde", "compact_str/serde", "smallvec/serde"]
derive = ["dep:garde_derive"]
url = ["dep:url", "garde_derive?/url"]
unicode = ["dep:unicode-segmentation"]
credit-card = ["dep:card-validate", "garde_derive?/credit-card"]
phone-number = ["dep:phonenumber", "garde_derive?/phone-number"]
email = ["regex", "garde_derive?/email"]
email-idna = ["dep:idna"]
regex = ["dep:regex", "dep:once_cell", "garde_derive?/regex"]
# for backward compatibility with <0.14.0
pattern = ["regex"]                      
js-sys = ["dep:js-sys", "garde_derive?/js-sys"]
rust_decimal = ["dep:rust_decimal"]

[dependencies]
# Workspace
garde_derive = { workspace = true, optional = true, default-features = false }

card-validate = { version = "2.3", optional = true }
compact_str = { version = "0.9.0", default-features = false }
idna = { version = "1", optional = true }
once_cell = { version = "1", optional = true }
phonenumber = { version = "0.3", optional = true }
regex = { version = "1", default-features = false, features = ["std"], optional = true }
rust_decimal = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
smallvec = { version = "1.15.1", default-features = false }
unicode-segmentation = { version = "1.13.2", optional = true }
url = { version = "2", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
glob = "0.3.3"
insta = { version = "1.47.2" }
owo-colors = { version = "4" }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
trybuild = { version = "1.0" }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.71"
