[package]
name = "garde_derive"
version = "0.20.0"
edition = "2021"
repository = "https://github.com/jprochazk/garde"
license = "MIT OR Apache-2.0"
description = "Derive macros for garde"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
# NOTE: When adding new validation rule feature flags, don't forget to add checking to `src/syntax.rs`
regex = ["dep:regex"]
email = []
url = []
credit-card = []
phone-number = []

[dependencies]
syn = { version = "2", features = ["full", "derive"] }
quote = { version = "1" }
proc-macro2 = { version = "1" }
regex = { version = "1", default-features = false, features = [
  "std",
], optional = true }
