[package]
name = "garde_tests"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garde = { version = "0.10.0", path = "../garde" }

[dev-dependencies]
trybuild = { version = "1.0" }
insta = { version = "1.29" }
owo-colors = { version = "3.5.0" }

[profile.dev.package]
insta = { opt-level = 3 }
trybuild = { opt-level = 3 }
