[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jprochazk/garde"
license = "MIT OR Apache-2.0"
description = "xtask for garde"
readme = "../README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
argh = "0.1.12"
glob = { version = "0.3.1", default-features = false }
semver = "1.0.18"
toml_edit = { version = "0.19.14", features = ["perf"] }
