[package]
name = "axum_garde"
version = "0.14.1"
edition = "2021"
repository = "https://github.com/jprochazk/garde"
license = "MIT OR Apache-2.0"
description = "Axum integration for garde"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = ["json", "query", "form"]
# Axum
json = ["axum/json"]
query = ["axum/query"]
form = ["axum/form"]
# Axum extra
axum-extra-protobuf = ["axum-extra/protobuf"]
axum-extra-query = ["axum-extra/query"]

[dependencies]
axum = { version = "0.6.17", default-features = false }
axum-extra = { version = "0.7.4", default-features = false, optional = true }
axum-yaml = { version = "0.3.0", default-features = false, optional = true }
axum-msgpack = { version = "0.3.0", default-features = false, optional = true }
garde = { version = "0.14.0", path = "../../garde", default-features = false }
thiserror = { version = "1.0.40", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.96" }
garde = { version = "0.14.0", path = "../../garde", features = ["default", "derive"] }
axum = { version = "0.6.17", features = ["default", "macros"] }
axum-test = { version = "10.1.0" }
tokio = { version = "1.28.0", features = ["full"] }
prost = { version = "0.11.9" }
rstest = { version = "0.17.0" }
speculoos = { version = "0.11.0" }

[[example]]
name = "json"
required-features = ["json"]

[[example]]
name = "custom_validation"
required-features = ["json"]
