[package]
name = "axum_garde"
version = "0.17.0"
edition = "2021"
repository = "https://github.com/jprochazk/garde"
license = "MIT OR Apache-2.0"
description = "Axum integration for garde"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = ["json", "query", "form"]
# Axum
json = ["axum/json"]
query = ["axum/query"]
form = ["axum/form"]
# Axum extra
axum-extra-protobuf = ["axum-extra/protobuf"]
axum-extra-query = ["axum-extra/query"]

[dependencies]
axum = { version = "0.7", default-features = false }
axum-extra = { version = "0.9", default-features = false, optional = true }
axum-yaml = { version = "0.4", default-features = false, optional = true }
axum-msgpack = { version = "0.4", default-features = false, optional = true }
garde = { version = "0.17.0", path = "../../garde", default-features = false }
thiserror = { version = "1.0", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
garde = { version = "0.17.0", path = "../../garde", features = [
  "full",
  "derive",
] }
axum = { version = "0.7", features = ["default", "macros"] }
axum-test = { version = "14.1" }
tokio = { version = "1.28", features = ["full"] }
prost = { version = "0.12" }
rstest = { version = "0.18" }
speculoos = { version = "0.11" }

[[example]]
name = "json"
required-features = ["json"]

[[example]]
name = "custom_validation"
required-features = ["json"]
